Updated with RF values

--- a/suman_test_CIFAR_10_EVA4_S7.ipynb
+++ b/suman_test_CIFAR_10_EVA4_S7.ipynb
@@ -6,7 +6,7 @@
       "name": "suman_test_CIFAR_10_EVA4_S7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlt58oWG75ZRFyPAgYHm+U",
+      "authorship_tag": "ABX9TyNdQzBW+mybZX582CjmS24B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,11 +62,11 @@
       "metadata": {
         "id": "RfUkfTJCQ1wq",
         "colab_type": "code",
+        "outputId": "72563c90-7963-428d-8b73-b2a7eb86454d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "72563c90-7963-428d-8b73-b2a7eb86454d"
+        }
       },
       "source": [
         "# 1. Download datasets and apply transforms\n",
@@ -86,7 +86,7 @@
         "\n",
         "classes = trainDataset.classes"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,11 +103,11 @@
       "metadata": {
         "id": "Y64IC2at9gps",
         "colab_type": "code",
+        "outputId": "94820da7-7b71-4fe6-a293-ac0b8da27f15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "94820da7-7b71-4fe6-a293-ac0b8da27f15"
+        }
       },
       "source": [
         "# Calculation of mean and var and std\n",
@@ -117,7 +117,7 @@
         "print(np.var(trainDataset.data))\n",
         "print(np.std(trainDataset.data))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,11 +137,11 @@
       "metadata": {
         "id": "9QNFFJvtWsE6",
         "colab_type": "code",
+        "outputId": "4f95a298-fdde-4b37-ad6c-44ddf2e7171f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4f95a298-fdde-4b37-ad6c-44ddf2e7171f"
+        }
       },
       "source": [
         "SEED = 1\n",
@@ -165,7 +165,7 @@
         "# test dataloader\n",
         "test_loader = torch.utils.data.DataLoader(testDataset, **dataloader_args)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,11 +181,11 @@
       "metadata": {
         "id": "VA2iePe9fhSM",
         "colab_type": "code",
+        "outputId": "16c0e52d-4b08-45a4-b7bc-99d8e521f738",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 291
-        },
-        "outputId": "16c0e52d-4b08-45a4-b7bc-99d8e521f738"
+        }
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -212,7 +212,7 @@
         "# print labels\n",
         "print(' '.join('%10s' % classes[labels[j]] for j in range(4)))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,54 +257,54 @@
         "        drpout = nn.Dropout(0.16)\n",
         "        self.conv_layer1 = nn.Sequential(\n",
         "            # Conv Layer block 1\n",
-        "            nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, padding=1),\n",
+        "            nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, padding=1),  # IP = 32  OP = 32  RF = 3\n",
         "            nn.BatchNorm2d(32),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, padding=1),\n",
+        "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, padding=1), # IP = 32  OP = 32  RF = 5\n",
         "            nn.BatchNorm2d(64),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2)                                # IP = 32  OP = 16  RF = 6\n",
         "        )\n",
         "        self.conv_layer2 = nn.Sequential(\n",
         "            # Conv Layer block 2\n",
         "            # Dilated conv\n",
-        "            nn.Conv2d(in_channels=64, out_channels=128, kernel_size=3, padding=2,dilation=2),\n",
+        "            nn.Conv2d(in_channels=64, out_channels=128, kernel_size=3, padding=2,dilation=2),  # IP = 16  OP = 16  RF = 14\n",
         "            nn.BatchNorm2d(128),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.Conv2d(in_channels=128, out_channels=128, kernel_size=3, padding=1,dilation=1),\n",
+        "            nn.Conv2d(in_channels=128, out_channels=128, kernel_size=3, padding=1,dilation=1), #IP= 16  OP= 16  RF=18\n",
         "            nn.BatchNorm2d(128),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2),                                          # IP=16  OP= 8 RF= 20\n",
         "            #nn.Dropout2d(p=0.05)\n",
         "        )\n",
         "        self.conv_layer3 = nn.Sequential(\n",
         "            # Conv Layer block 3\n",
         "            # Depthwise sep Conv\n",
         "            #nn.Conv2d(in_channels=128, out_channels=256, kernel_size=3, padding=1),\n",
-        "            nn.Conv2d(in_channels=128, out_channels=128, kernel_size=3, padding=1,groups=128),\n",
-        "            nn.Conv2d(in_channels=128,out_channels=256,kernel_size=1),\n",
+        "            nn.Conv2d(in_channels=128, out_channels=128, kernel_size=3, padding=1,groups=128),   # IP=8  OP=8  RF=28\n",
+        "            nn.Conv2d(in_channels=128,out_channels=256,kernel_size=1),                           #IP=8  OP=8   RF = 28   \n",
         "            nn.BatchNorm2d(256),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.Conv2d(in_channels=256, out_channels=128, kernel_size=3, padding=1),\n",
+        "            nn.Conv2d(in_channels=256, out_channels=128, kernel_size=3, padding=1),             # IP = 8   OP = 8  RF= 36\n",
         "            nn.BatchNorm2d(128),\n",
         "            nn.ReLU(),\n",
         "            drpout,\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2)                                               # IP=8  OP=4  RF = 40\n",
         "        )\n",
         "        self.conv_layer4 = nn.Sequential(\n",
         "            # Conv Layer block 4\n",
-        "            nn.Conv2d(in_channels=128, out_channels=10, kernel_size=1, padding=0),\n",
+        "            nn.Conv2d(in_channels=128, out_channels=10, kernel_size=1, padding=0),             # IP=4  OP=4  RF = 40\n",
         "            nn.BatchNorm2d(10),\n",
         "            nn.ReLU(),\n",
         "            #drpout,\n",
         "            #nn.Conv2d(in_channels=128, out_channels=10, kernel_size=1, padding=0),\n",
         "            #nn.ReLU()\n",
-        "            nn.AvgPool2d(kernel_size=4)\n",
+        "            nn.AvgPool2d(kernel_size=4)                                                       #IP=4  OP=1   RF=64    \n",
         "          )\n",
         "\n",
         "    def forward(self, x):\n",
@@ -325,11 +325,11 @@
       "metadata": {
         "id": "0m33k-X9ZGnv",
         "colab_type": "code",
+        "outputId": "82558550-90ad-476e-e017-418fe2228d2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 986
-        },
-        "outputId": "82558550-90ad-476e-e017-418fe2228d2a"
+        }
       },
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -337,7 +337,7 @@
         "#set_trace()\n",
         "summary(model,(3,32,32))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,11 +426,11 @@
       "metadata": {
         "id": "dv8ci_WcyZRH",
         "colab_type": "code",
+        "outputId": "f65f6a47-0a9c-4a47-de3f-82f77df0a770",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "f65f6a47-0a9c-4a47-de3f-82f77df0a770"
+        }
       },
       "source": [
         "epochs= 6\n",
@@ -462,7 +462,7 @@
         "\n",
         "print('Finished Training')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,11 +484,11 @@
       "metadata": {
         "id": "fS7G1_5xztK6",
         "colab_type": "code",
+        "outputId": "754d508c-1555-448d-bf18-887ebdc7e56c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 155
-        },
-        "outputId": "754d508c-1555-448d-bf18-887ebdc7e56c"
+        }
       },
       "source": [
         "dataiter = iter(test_loader)\n",
@@ -499,7 +499,7 @@
         "imshow(torchvision.utils.make_grid(images[:4]))\n",
         "print('GroundTruth:', ' '.join('%8s' % classes[labels[j]] for j in range(4)))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,11 +527,11 @@
       "metadata": {
         "id": "iqnNDsC9ynRW",
         "colab_type": "code",
+        "outputId": "b0f6c6db-d3e5-4ddb-804b-4783aa77a306",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b0f6c6db-d3e5-4ddb-804b-4783aa77a306"
+        }
       },
       "source": [
         "outputs = net(images)\n",
@@ -540,7 +540,7 @@
         "print('Predicted: ', ' '.join('%5s' % classes[predicted[j]]\n",
         "                              for j in range(4)))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,11 +556,11 @@
       "metadata": {
         "id": "1ayks_Yoz5BS",
         "colab_type": "code",
+        "outputId": "2fb07064-9ab6-4121-ac1c-37e255a2c360",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2fb07064-9ab6-4121-ac1c-37e255a2c360"
+        }
       },
       "source": [
         "correct = 0\n",
@@ -578,7 +578,7 @@
         "print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
         "    100 * correct / total))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,11 +594,11 @@
       "metadata": {
         "id": "Y-6uDQ2Hz8Gj",
         "colab_type": "code",
+        "outputId": "e2c27915-2c3a-49d9-dea0-067e1306ac67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
-        },
-        "outputId": "e2c27915-2c3a-49d9-dea0-067e1306ac67"
+        }
       },
       "source": [
         "class_correct = list(0. for i in range(10))\n",
@@ -621,7 +621,7 @@
         "    print('Accuracy of %5s : %2d %%' % (\n",
         "        classes[i], 100 * class_correct[i] / class_total[i]))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
