--- a/EVA_4_S10_Suman_Kanukollu_LRFinder_CIFAR_10.ipynb
+++ b/EVA_4_S10_Suman_Kanukollu_LRFinder_CIFAR_10.ipynb
@@ -6,7 +6,7 @@
       "name": "EVA-4-S10-Suman-Kanukollu-LRFinder_CIFAR_10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqxzWtMaFu4+W3QkPHVjyF",
+      "authorship_tag": "ABX9TyPLSz5JcyP64M5FJC5i8Xql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -339,7 +339,7 @@
         "outputId": "9500838b-901d-4f42-987b-2785959e551f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 68
         }
       },
       "source": [
@@ -370,7 +370,7 @@
         "outputId": "a47b6955-6a47-4cbf-f5c3-f82e91b57b69",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 51
         }
       },
       "source": [
@@ -413,7 +413,7 @@
         "outputId": "7ffae14b-204d-471d-d063-6f75b5436096",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 946
+          "height": 887
         }
       },
       "source": [
@@ -516,7 +516,7 @@
         "outputId": "37928029-cb58-425c-ee2d-70c09d78580e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201
+          "height": 190
         }
       },
       "source": [
@@ -565,7 +565,7 @@
         "outputId": "f732519d-5b7a-433d-85c4-d06a11d941c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 51
         }
       },
       "source": [
@@ -644,7 +644,7 @@
         "outputId": "77937964-0d0f-490f-f0de-4d3e8a88c92b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 945
+          "height": 884
         }
       },
       "source": [
@@ -736,7 +736,7 @@
         "outputId": "492b3220-63d7-4286-b3ea-9e31bb4e19fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 126
+          "height": 119
         }
       },
       "source": [
@@ -777,7 +777,7 @@
         "outputId": "792b8fb1-a44b-4ba0-e4e7-9dad9ceac234",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 187
         }
       },
       "source": [
@@ -826,7 +826,7 @@
         "outputId": "7df86f8f-69e8-47b7-e0bc-42ced33961d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 308
         }
       },
       "source": [
@@ -1021,7 +1021,7 @@
         "outputId": "3a8b938c-f768-4905-f247-3c07b295a6e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 360
         }
       },
       "source": [
@@ -1074,7 +1074,7 @@
         "outputId": "6a162b56-a350-410b-f3c0-5e98146061d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 498,
+          "height": 468,
           "referenced_widgets": [
             "037734c03a904ec68a2240d41bc86703",
             "6b57e3eaf8cf441d9708d7ce55b44ceb",
@@ -1322,7 +1322,7 @@
         "outputId": "de410e5d-8a7d-43ae-90be-25a199572882",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 952
         }
       },
       "source": [
@@ -1406,7 +1406,7 @@
         "outputId": "c4e14ae5-d200-45e6-aefb-0fb1a0a68d8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 946
+          "height": 867
         }
       },
       "source": [
@@ -1485,7 +1485,7 @@
         "outputId": "dd92cc3c-c31d-48ad-cc5e-bfa75e452bc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 946
+          "height": 867
         }
       },
       "source": [
@@ -1573,7 +1573,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
         "outputId": "5df5e915-47d1-4f75-d72e-198ca86a7c02"
       },
@@ -1598,7 +1598,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 753
+          "height": 743
         },
         "outputId": "0cbffaf3-26be-48f8-a75c-71f8a7f1cfb9"
       },
@@ -1654,7 +1654,7 @@
         "outputId": "d2fffa97-0e37-46fd-b369-618ea6615338",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 199
+          "height": 187
         }
       },
       "source": [
@@ -1835,7 +1835,7 @@
         "outputId": "cbe8bb50-1776-46d5-c00e-487f53882380",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 528
+          "height": 476
         }
       },
       "source": [
@@ -1941,7 +1941,7 @@
         "outputId": "9dc2caff-3d11-458f-b1b0-e4d6a71ba975",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 997
+          "height": 1000
         }
       },
       "source": [
@@ -2061,7 +2061,7 @@
         "outputId": "20fb9c4e-bcc3-4e60-f528-d965ef8c6870",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 51
         }
       },
       "source": [
@@ -2090,7 +2090,7 @@
         "outputId": "e059ff49-f038-4ea4-97ff-47cbbc0cb1ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
@@ -2119,7 +2119,7 @@
         "outputId": "1adb6293-1b30-4760-c3a3-867e8c361431",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 51
         }
       },
       "source": [
@@ -2188,6 +2188,16 @@
           },
           "execution_count": 34
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hlwo4vT9Fccp",
+        "colab_type": "text"
+      },
+      "source": [
+        "![LR](https://github.com/sumankanukollu/EVA_4_Assignments/blob/S_10_LRFinder_Misclassified_Cifar10/pytorch_Framework_suman-S9/pytorch_Framework_suman/outputs/LR_Finder_Graph.JPG?raw=true)"
       ]
     },
     {
